# commons/api/src/main/resources/openapi/store.yaml
@@ -10,9 +10,11 @@ tags:
     description: Operations related to Articles
   - name: Receipt
     description: Operations related to Receipts
+  - name: Store
+    description: Operations related to Stores
 
 security:
-  - bearerAuth: []
+  - bearerAuth: [ ]
 
 paths:
   /api/article/:
@@ -36,8 +38,57 @@ paths:
             application/json:
               schema:
                 type: array
+                uniqueItems: true
                 items:
                   $ref: "#/components/schemas/ArticleDTO"
+
+  /api/article/id/{id}:
+    get:
+      operationId: getArticleById
+      description: d
+      tags:
+        - Article
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: d
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: d
+          content:
+            application/json:
+              schema:
+                  $ref: "#/components/schemas/ArticleDTO"
+        404:
+          description: d
+
+  /api/article/gtin/{gtin}:
+    get:
+      operationId: getArticleByGtin
+      description: d
+      tags:
+        - Article
+      parameters:
+        - in: path
+          name: gtin
+          required: true
+          description: d
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: d
+          content:
+            application/json:
+              schema:
+                  $ref: "#/components/schemas/ArticleDTO"
+        404:
+          description: d
 
   /api/receipt/:
     post:
@@ -57,9 +108,101 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
                   $ref: "#/components/schemas/ReceiptDTO"
+
+  /api/store/:
+    get:
+      operationId: getStores
+      description: d
+      tags:
+        - Store
+      parameters:
+        - in: query
+          name: id
+          required: false
+          description: d
+          schema:
+            type: integer
+            format: int64
+        - in: query
+          name: country
+          required: false
+          description: d
+          schema:
+            type: string
+        - in: query
+          name: city
+          required: false
+          description: d
+          schema:
+            type: string
+        - in: query
+          name: street
+          required: false
+          description: d
+          schema:
+            type: string
+      responses:
+        200:
+          description: d
+          content:
+            application/json:
+              schema:
+                type: array
+                uniqueItems: true
+                items:
+                  $ref: "#/components/schemas/StoreDTO"
+
+  /api/store/id/{id}:
+    get:
+      operationId: getStoreById
+      description: d
+      tags:
+        - Store
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: d
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: d
+          content:
+            application/json:
+              schema:
+                  $ref: "#/components/schemas/StoreDTO"
+        404:
+          description: d
+
+  /api/store/id/{id}/registers/:
+    get:
+      operationId: getRegistersByStore
+      description: d
+      tags:
+        - Store
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: d
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: d
+          content:
+            application/json:
+              schema:
+                type: array
+                uniqueItems: true
+                items:
+                  $ref: "#/components/schemas/RegisterDTO"
+        404:
+          description: d
 
 components:
   securitySchemes:
@@ -76,6 +219,35 @@ components:
         id:
           type: integer
           format: int64
+        gtin:
+          type: integer
+          format: int64
+        name:
+          type: string
+        description:
+          type: string
+        manufacturer:
+          type: string
+        supplier:
+          type: string
+        unit:
+          type: string
+        purchasePrice:
+          type: number
+          format: double
+        sellingPrice:
+          type: number
+          format: double
+        taxRate:
+          type: number
+          format: double
+        stock:
+          type: integer
+          format: int64
+        isAvailable:
+          type: boolean
+        isDeposit:
+          type: boolean
 
     ReceiptDTO:
       type: object
@@ -84,3 +256,36 @@ components:
         id:
           type: integer
           format: int64
+        store:
+          $ref: "#/components/schemas/StoreDTO"
+        register:
+          $ref: "#/components/schemas/RegisterDTO"
+        cashierId:
+          type: integer
+          format: int64
+
+    StoreDTO:
+      type: object
+      description: d
+      properties:
+        id:
+          type: integer
+          format: int64
+        country:
+          type: string
+        city:
+          type: string
+        street:
+          type: string
+        streetNumber:
+          type: string
+
+    RegisterDTO:
+      type: object
+      description: d
+      properties:
+        id:
+          type: integer
+          format: int64
+        store:
+          $ref: "#/components/schemas/StoreDTO"
